Add header, logo, and icons.

--- a/html/index.html
+++ b/html/index.html
@@ -6,22 +6,58 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300&family=Montserrat+Alternates:ital,wght@0,500;1,500&family=Ubuntu&display=swap" rel="stylesheet">
-  <title>Popenstein | Let's make a song!</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300&family=Montserrat+Alternates:ital,wght@0,500;1,500&family=Ubuntu&display=swap"
+    rel="stylesheet">
+  <title>Popenstein</title>
 </head>
 
 <body>
 
+  <!-- Header -->
   <header>
-    <h1>Popenstein</h1>
+
+    <img id="logo" src="../img/logos/logo1.svg" alt="popenstein logo">
+
+    <nav>
+      <ul>
+        <li><a href="#">Archive</a></li>
+        <li><a href="#">Current Popenstein</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </nav>
+    
+    <div id="header-icons">
+      <img src="../img/icons/search.svg" alt="search icon">
+      <img src="../img/icons/user.svg" alt="user icon">
+    </div>
+
   </header>
 
-  <main>
+  <section id="hero">
+    
+  </section>
 
-  </main>
+  <!-- About -->
+  <section id="about">
 
+  </section>
+
+  <!-- Join Us -->
+  <section id="join-us">
+
+  </section>
+
+  <!-- Current Popenstein -->
+  <section id="current-popenstein">
+
+  </section>
+
+  <!-- Footer -->
   <footer>
 
   </footer>
