--- a/html/home.html
+++ b/html/home.html
@@ -221,6 +221,7 @@
       <h6>Info</h6>
       <a href="#">About Us</a>
       <a href="#">Contact Popenstein</a>
+      <a href="https://tweek.so/share/4Bbav1JHRCUgVlohF2bO" target="_blank">Roadmap</a>
       <a href="#">Privacy Policy</a>
       <a href="#">Cookie Policy</a>
       <a href="#">Terms and Conditions</a>
