Add logo to footer

--- a/html/home.html
+++ b/html/home.html
@@ -206,7 +206,8 @@
 
   <!-- Footer -->
   <footer>
-    <div id="logo-copyright">
+    <div id="logo-copyright-location">
+      <img class="prevent-select" src="../img/logos/bubble-logo.png" id="footer-bubble-logo">
       <img class="prevent-select" src="../img/logos/logo-white.png" alt="popenstein logo">
       <p>&#169; 2023 Popenstein</p>
       <div id="location">
