--- a/html/home.html
+++ b/html/home.html
@@ -148,7 +148,7 @@
         <p>
           100% of the money made with the song will go to <a href="https://www.charitywater.org/about" target="_blank"
             class="link">charity: water</a>,
-          a non-profit organization that brings clean and safe water to
+          a nonprofit organization that brings clean and safe water to
           people around the world.
         </p>
       </div>
@@ -191,7 +191,7 @@
     </div>
   </section>
 
-  <img class="wave" src="../img/graphics/waves3-alt.svg">
+  <img class="wave" src="../img/graphics/waves3.svg">
   
   <!-- Current Popenstein -->
   <section id="current-popenstein">
@@ -208,7 +208,7 @@
   <footer>
     <div id="logo-copyright-location">
       <img class="prevent-select" src="../img/logos/bubble-logo.png" id="footer-bubble-logo">
-      <img class="prevent-select" src="../img/logos/logo-white.png" alt="popenstein logo">
+      <img class="prevent-select" src="../img/logos/logo-black.png" alt="popenstein logo">
       <p>&#169; 2023 Popenstein</p>
       <div id="location">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
