--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>Popenstein</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="../css/header.css">
-  <link rel="stylesheet" href="../css/index.css">
-  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/footer.css">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,17 +21,17 @@
     rel="stylesheet">
     
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="../img/favicon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="./img/favicon/site.webmanifest">
 </head>
 
 <body>
 
   <!-- Header -->
   <header>
-    <img id="logo" class="prevent-select" src="../img/logos/logo-black.png" alt="popenstein logo">
+    <img id="logo" class="prevent-select" src="./img/logos/logo-black.png" alt="popenstein logo">
 
     <nav>
       <ul>
@@ -52,6 +52,11 @@
         <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2" />
         <circle cx="12" cy="7" r="4" />
       </svg>
+      <svg id="hamburguer-menu" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <line x1="4" y1="12" x2="20" y2="12"></line>
+        <line x1="4" y1="6" x2="20" y2="6"></line>
+        <line x1="4" y1="18" x2="20" y2="18"></line>
+      </svg>
     </div>
 
   </header>
@@ -66,10 +71,10 @@
         song made completely by the community!
       </p>
     </div>
-    <button>Check it Out</button>
+    <button><p>Check it Out</p></button>
   </section>
 
-  <img class="wave" src="../img/graphics/waves.svg">
+  <img class="wave" src="./img/graphics/waves.svg">
 
   <!-- About -->
   <section id="about">
@@ -153,19 +158,19 @@
         </p>
       </div>
     </div>
-    <button>Got any Doubts?</button>
+    <button><p>Got any Doubts?</p></button>
   </section>
 
-  <img class="wave" src="../img/graphics/waves2.svg">
+  <img class="wave" src="./img/graphics/waves2.svg">
 
   <!-- Join Us -->
   <section id="join-us">
     <h2>Join the Movement</h2>
     <div id="button-container">
-      <button>Create Account</button>
-      <button>Log In</button>
+      <button><p>Create Account</p></button>
+      <button><p>Log In</p></button>
     </div>
-    <button>Current Popenstein</button>
+    <button><p>Current Popenstein</p></button>
     <div class="socials">
       <!-- Discord -->
       <a href="https://discord.gg/TMjJh7MKQC" target="_blank" tabindex="-1">
@@ -191,7 +196,7 @@
     </div>
   </section>
 
-  <img class="wave" src="../img/graphics/waves3.svg">
+  <img class="wave" src="./img/graphics/waves3.svg">
   
   <!-- Current Popenstein -->
   <section id="current-popenstein">
@@ -200,15 +205,15 @@
       <p>
         We're working on it!
       </p>
-      <button>Home Page</button>
+      <button><p>Home Page</p></button>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
     <div id="logo-copyright-location">
-      <img class="prevent-select" src="../img/logos/bubble-logo.png" id="footer-bubble-logo">
-      <img class="prevent-select" src="../img/logos/logo-black.png" alt="popenstein logo">
+      <img class="prevent-select" src="./img/logos/bubble-logo.png" id="footer-bubble-logo">
+      <img class="prevent-select" src="./img/logos/logo-black.png" alt="popenstein logo">
       <p>&#169; 2023 Popenstein</p>
       <div id="location">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
